[tool.poetry]
name = "vgmdb"
version = "0.1.0"
description = "Python-based API for fetching music and soundtrack data from VGMdb."
authors = ["Hugo7650 <31364658+Hugo7650@users.noreply.github.com>"]
license = "Apache-2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.32.2"
lxml = "^4.9.3"


[tool.poetry.group.dev.dependencies]
sphinx = "^7.2.6"
myst-parser = "^2.0.0"
sphinx-rtd-theme = "^1.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
